crates/motarjim-html/tests/snapshots/html_tests__snapshot_style_tag.snap
---
source: crates/motarjim-html/tests/html_tests.rs
expression: "debug_html(\"<style>body { color: red; }</style>\")"
---
<html >
  <head >
    <style >
      body { color: red; }
    </style>
  </head>
  <body >
  </body>
</html>
