crates/motarjim-html/tests/snapshots/html_tests__snapshot_unicode.snap
---
source: crates/motarjim-html/tests/html_tests.rs
expression: "debug_html(\"<p>Hello 世界 🎉</p>\")"
---
<html >
  <head >
  </head>
  <body >
    <p >
      Hello 世界 🎉
    </p>
  </body>
</html>
