crates/motarjim-html/tests/snapshots/html_tests__snapshot_void_elements.snap
---
source: crates/motarjim-html/tests/html_tests.rs
expression: "debug_html(\"<div><img src='a.png'><br><input type='text' value='hello'></div>\")"
---
<html >
  <head >
  </head>
  <body >
    <div >
      <img src="a.png">
      </img>
      <br >
      </br>
      <input type="text" value="hello">
      </input>
    </div>
  </body>
</html>
