crates/motarjim-html/tests/snapshots/html_tests__snapshot_with_attributes.snap
---
source: crates/motarjim-html/tests/html_tests.rs
expression: "debug_html(\"<div class='container' id='main' data-test='value'>Content</div>\")"
---
<html >
  <head >
  </head>
  <body >
    <div class="container" id="main" data-test="value">
      Content
    </div>
  </body>
</html>
